name:
  symbex
version:
  0.5.0
synopsis:
  Ethereum symbolic execution engine
homepage:
  https://github.com/dapphub/symbex
license:
  AGPL-3
license-file:
  LICENSE
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    Symbex
  ghc-options:
    -O2 -Wall -Werror
  build-depends:
    base >=4.9 && <4.10,
    containers                        >= 0.5.7 && < 0.6,
    bytestring                        >= 0.10.8 && < 0.11,
    text                              >= 1.2.2 && < 1.3,
    vector                            >= 0.11.0 && < 0.13,
    unordered-containers              >= 0.2.8 && < 0.3,
    base16-bytestring                 >= 0.1.1 && < 0.2,
    mtl                               >= 2.2.1 && < 2.3,
    cryptonite                        >= 0.21 && < 0.24,
    data-dword                        >= 0.3.1 && < 0.4,
    lens                              >= 4.15.1 && < 4.16,
    optparse-generic                  >= 1.1.5 && < 1.3,
    rosezipper                        >= 0.2 && < 0.3,
    uniplate                          >= 1.6 && < 1.7
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    TypeFamilies
