name:
  symbex
version:
  0.5.0
synopsis:
  Ethereum symbolic execution engine
homepage:
  https://github.com/dapphub/symbex
license:
  AGPL-3
license-file:
  LICENSE
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
build-type:
  Simple
cabal-version:
  >=1.10

executable symbex
  exposed-modules:
    Symbex
  main-is:
    Main.hs
  ghc-options:
    -O2 -Wall -Werror
  build-depends:
    base >=4.9 && <4.10,
    containers                        >= 0.5.7 && < 0.6,
    bytestring                        >= 0.10.8 && < 0.11,
    text                              >= 1.2.2 && < 1.3,
    vector                            >= 0.11.0 && < 0.13,
    mtl                               >= 2.2.1 && < 2.3,
    uniplate                          >= 1.6 && < 1.7,
    s-cargot                          == 0.1.2.0,
    aeson                             >= 1 && < 1.3,
    sbv                               >= 5.14 && < 7
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    TypeFamilies
