name:
  symbex
version:
  0.5.1
synopsis:
  Ethereum symbolic execution engine
homepage:
  https://github.com/dapphub/symbex
license:
  AGPL-3
license-file:
  LICENSE
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    EVM.Assembly,
    EVM.Symbex,
    EVM.Symbex.Print,
    EVM.Symbex.Main,
    Dappsys.Weth
  ghc-options:
    -O2 -Wall -Werror
  build-depends:
    base >= 4.9 && < 4.10,
    mtl,
    aeson,
    uniplate,
    s-cargot,
    text,
    bytestring
  hs-source-dirs: src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    TypeFamilies

executable symbex
  main-is:
    Main.hs
  ghc-options:
    -O2 -Wall -Werror
  build-depends:
    base >=4.9 && <4.10,
    symbex
  default-language:
    Haskell2010
